src/web/.helm/prod/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o ./.helm/prod/templates -n argiago
    kompose.image-pull-secret: registry-auth-client-secret
    kompose.service.expose: argiago.ru
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.expose.tls-secret: argiago-web-prod-secret
    kompose.version: 1.31.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: argiago
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 3000
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
