src/web/.helm/prod/templates/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kompose.cmd: kompose convert -f docker-compose.prod.yml -o ./.helm/prod/templates -n argiago
    kompose.image-pull-secret: registry-auth-client-secret
    kompose.service.expose: argiago.ru
    kompose.service.expose.ingress-class-name: nginx
    kompose.service.expose.tls-secret: argiago-web-prod-secret
    kompose.version: 1.31.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
  namespace: argiago
spec:
  ingressClassName: nginx
  rules:
    - host: argiago.ru
      http:
        paths:
          - backend:
              service:
                name: web
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argiago.ru
      secretName: argiago-web-prod-secret
status:
  loadBalancer: {}
